add luci-app-dockerman for action build

--- a/.github/config
+++ b/.github/config
@@ -2,10 +2,15 @@
 
 cd lede
 
-git clone https://github.com/tuanqing/install-program package/install-program
-git clone https://github.com/tuanqing/openwrt-mentohust package/openwrt-mentohust
-git clone https://github.com/tuanqing/luci-app-mentohust package/luci-app-mentohust
-git clone https://github.com/jerrykuku/luci-theme-argon -b 18.06 package/luci-theme-argon
+(
+    cd package
+    git clone https://github.com/tuanqing/install-program
+    git clone https://github.com/tuanqing/openwrt-mentohust
+    git clone https://github.com/tuanqing/luci-app-mentohust
+    git clone https://github.com/jerrykuku/luci-theme-argon -b 18.06
+    git clone https://github.com/lisaac/luci-lib-docker
+    git clone https://github.com/lisaac/luci-app-dockerman
+)
 
 cat >feeds.conf.default <<-EOF
 # src-git luci https://git.openwrt.org/project/luci.git;openwrt-19.07
@@ -17,7 +22,7 @@ src-git telephony https://git.openwrt.org/feed/telephony.git
 src-git helloworld https://github.com/fw876/helloworld.git
 EOF
 
-rm -rf package/lean/{samba4,luci-app-samba4,luci-app-ttyd,luci-theme-argon}
+rm -rf package/lean/{samba4,luci-app-samba4,luci-app-ttyd,luci-theme-argon,luci-lib-docker}
 svn co https://github.com/Lienol/openwrt/branches/main/package/libs/{libaudit,musl-fts,libsemanage} package/libs
 
 ./scripts/feeds update -a
@@ -72,6 +77,7 @@ CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-mentohust=y
+CONFIG_PACKAGE_luci-app-dockerman=y
 ## luci theme
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
 CONFIG_PACKAGE_luci-theme-argon=y
